@@ -4,6 +4,8 @@ relational \(em Python implementation of Relational algebra.
 .SH "SYNOPSIS" 
 .PP 
 \fBrelational\fR [\-v\fR\fP]
+.br
+\fBrelational\fR [ FILE .\|.\|.]
 
 .SH "DESCRIPTION" 
 .PP 
