@@ -92,3 +92,4 @@
 0.11
 - Font is set only on windows (Rev 206)
 - Improved futile_union_intersection_subtraction in case of A-A, when A is a sub-query (Rev 208)
+- Can load relations specified in command line (Rev 209)
